src/objects/Deal_Product__c.object
<CustomObject>
    <fields>
        <fullName>ASP__c</fullName>
        <formula>Invoice_Price__c - ( Contractual_IPP_Amount__c +  Contractual_MDF_Amount__c +  Contractual_SDF_Amount__c +  Non_Contractual_IPP_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average Selling Price</inlineHelpText>
        <label>ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_P_Amount__c</fullName>
        <inlineHelpText>Advertisement and Promotion</inlineHelpText>
        <label>A&amp;P Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Amount__c</fullName>
        <formula>GM_Amount__c -  A_P_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GM - A&amp;P</inlineHelpText>
        <label>CM Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractual_IPP_Amount__c</fullName>
        <label>Contractual IPP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractual_IPP_Total__c</fullName>
        <formula>Quantity__c * Contractual_IPP_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractual IPP Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractual_MDF_Amount__c</fullName>
        <label>Contractual MDF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractual_MDF_Total__c</fullName>
        <formula>Quantity__c * Contractual_MDF_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractual MDF Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractual_SDF_Amount__c</fullName>
        <label>Contractual SDF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractual_SDF_Total__c</fullName>
        <formula>Quantity__c * Contractual_SDF_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractual SDF Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Products</relationshipLabel>
        <relationshipName>Deal_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GM_Amount_Per_Unit__c</fullName>
        <formula>ASP__c -  MCPU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ASP - MCPU</inlineHelpText>
        <label>GM Amount Per Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Amount__c</fullName>
        <formula>Quantity__c - (ASP__c -  MCPU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Price__c</fullName>
        <label>Invoice Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCPU__c</fullName>
        <inlineHelpText>Motorola Cost Per Unit</inlineHelpText>
        <label>MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSA__c</fullName>
        <formula>Quantity__c  *  ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net sales after discount</inlineHelpText>
        <label>NSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSBD__c</fullName>
        <formula>Quantity__c  *  Invoice_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net sales before discount</inlineHelpText>
        <label>NSBD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Contractual_IPP_Amount__c</fullName>
        <label>Non Contractual IPP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Contractual_IPP_Total__c</fullName>
        <formula>Quantity__c * Non_Contractual_IPP_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Contractual IPP Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Deal Products</relationshipLabel>
        <relationshipName>Deal_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Accural_Amount__c</fullName>
        <label>Special Accural Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Accural_Text__c</fullName>
        <label>Special Accural Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Accural_Total__c</fullName>
        <formula>Quantity__c * Special_Accural_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Accural Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deal Product</label>
    <nameField>
        <displayFormat>DP-{000000}</displayFormat>
        <label>DP #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>